server created with auth for users

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
 PORT=4000
+DB_CNN=mongodb+srv://mongo_user:TQi2orBvyIMCrZE1@cluster0.b4hnbiv.mongodb.net/mern_ecommerce
+SECRET_JWT_SEED=Proyect-Node-React-Mongo-Express
