--- a/Client/.env.production
+++ b/Client/.env.production
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=https://mern-ecommerce-production-5ee2.up.railway.app/api
+REACT_APP_API_URL=https://backend-server-ecommerce.onrender.com/
