install google auth library

--- a/Server/.env
+++ b/Server/.env
@@ -1,3 +1,6 @@
 PORT=4000
 DB_CNN=mongodb+srv://mongo_user:TQi2orBvyIMCrZE1@cluster0.b4hnbiv.mongodb.net/mern_ecommerce
 SECRET_JWT_SEED=Proyect-Node-React-Mongo-Express
+
+GOOGLE_CLIENT_ID=110140774219-j1ah7tvu44el184gou69qvqceern22eh.apps.googleusercontent.com
+GOOGLE_SECRET_ID=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
